# lin_com_basic

./: Cargo.toml  build-rust-task.sh  commitments.txt  my_project.wasm  proof.txt  run-truebit-task.sh
src/: main.rs
